--- a/HTML/addPlayer.html
+++ b/HTML/addPlayer.html
@@ -11,7 +11,17 @@
   <title>Créer Un Projet</title>
 </head>
 <body style="background-color: #251E64!important; color:white">
-
+  <header class="blog-header pt-3">
+    <div class="row flex-nowrap justify-content-between align-items-center">
+      <div class="col-4 pt-1 text-center">
+      </div>
+      <div class="col-4 text-center">
+        <img src="logotennis.png" alt="" width="48" height="48">
+      </div>
+      <div class="col-4 d-flex justify-content-end align-items-center">
+      </div>
+    </div>
+  </header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #251E64!important; color:white">
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
@@ -19,14 +29,14 @@
         <li class="nav-item">
           <a class="nav-link text-white" href=dashboard_manager.html >Mes Tournois</a>
         </li>
-        <li class="nav-item  active">
+        <li class="nav-item  ">
           <a class="nav-link text-white" > Créer un Tournoi</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" > Tous les Joueurs </a>
+          <a class="nav-link text-white" href=listPlayers.html > Tous les Joueurs </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white"v> Ajouter un Joueur </a>
+        <li class="nav-item active">
+          <a class="nav-link text-white" href=addPlayer.html> Ajouter un Joueur </a>
         </li>
       </ul>
     </div>
