--- a/HTML/listPlayers.html
+++ b/HTML/listPlayers.html
@@ -30,7 +30,7 @@
           <a class="nav-link text-white"  >Mes Tournois</a>
         </li>
         <li class="nav-item  ">
-          <a class="nav-link text-white" > Créer un Tournoi</a>
+          <a class="nav-link text-white"  href=addTournament.html > Créer un Tournoi</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link text-white" href=listPlayers.html> Tous les Joueurs </a>
