--- a/HTML/addMatch.html
+++ b/HTML/addMatch.html
@@ -26,10 +26,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link text-white" href=listTournament.html>Mes Tournois</a>
         </li>
-        <li class="nav-item active ">
+        <li class="nav-item  ">
           <a class="nav-link text-white" href=addTournament.html > Créer un Tournoi</a>
         </li>
         <li class="nav-item">
@@ -43,34 +43,57 @@
   </nav>
   <div class="container col-md-5">
     <br>
-    <h1> Créer un Tournoi</h1>
+    <h1> Nom du Tournoi</h1>
+    <br>
+    <br>
+    <h1> Ajouter un Match</h2>
     <br>
     <form>
       <div class="form-group">
-        <label for="nomTournoi">Nom du Tournoi</label>
-        <input type="text" class="form-control" id="nomTournoi" placeholder="Donnez un nom à votre tournoi">
+        <label for="playerOne">Joueur 1</label>
+        <select class="form-control"  id="playerOne">
+          <option value="" disabled selected>Choississez Joueur 1</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="lieuTournoi">Lieu du Tournoi</label>
-        <input type="text" class="form-control" id="lieuTournoi" placeholder="Lieu du Tournoi">
+        <label for="playerTwo">Joueur 2</label>
+        <select class="form-control"  id="playerTwo">
+          <option value="" disabled selected>Choississez Joueur 2</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="dateDebut">Date de Début</label>
-        <input type="date" class="form-control" id="dateDebut" placeholder="Date de début du Tournoi">
+        <label for="referee">Joueur 2</label>
+        <select class="form-control"  id="referee">
+          <option value="" disabled selected>Choississez Arbitre</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="dateFin">Date de Fin</label>
-        <input type="date" class="form-control" id="dateFin" placeholder="Date de fin du Tournoi">
+        <label for="dateDebut">Date</label>
+        <input type="date" class="form-control" id="dateDebut" placeholder="Date du Match">
       </div>
       <div class="form-group">
-        <label for="nombreJoueurs">Nombre de Joueurs</label>
-        <input type="number" class="form-control" id="nombreJoueurs" placeholder="Entrez le nombre de joueurs"></input>
+        <label for="tour">Tour</label>
+        <select class="form-control"  id="tour">
+          <option value="" disabled selected>Choississez le Tour du Match</option>
+          <option>1er Tour</option>
+          <option>2ème Tour</option>
+          <option>3ème Tour</option>
+          <option>Huitièmes de Finale</option>
+          <option>Quart de Finale</otion>
+          <option>Demi Finale</option>
+          <option>Finale</option>
+        </select>
       </div>
       <div class="form-group">
-        <label for="exampleFormControlSelect2">Règles</label>
-        <select class="form-control" id="exampleFormControlSelect2">
-            <option>2 Sets Gagnants</option>
-            <option>3 Sets Gagnants</option>
+        <label for="nombreJoueurs">Score</label>
+        <input type="text" class="form-control" id="nombreJoueurs" placeholder="Entrez le score"></input>
+      </div>
+      <div class="form-group">
+        <label for="winner">Joueur Vainqueur</label>
+        <select class="form-control" id="winner">
+          <option value="" disabled selected>Choississez le joueur vainqueur du match</option>
+          <option>1</option>
+          <option>2</option>
         </select>
       </div>
       
