--- a/HTML/addPlayer.html
+++ b/HTML/addPlayer.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent" >
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link text-white" href=dashboard_manager.html >Mes Tournois</a>
+          <a class="nav-link text-white" href=listTournament.html>Mes Tournois</a>
         </li>
         <li class="nav-item  ">
           <a class="nav-link text-white"  href=addTournament.html  > Créer un Tournoi</a>
